retrieveUnpackaged/objects/TQB_Candidate_Questionnaire__c.object
<CustomObject>
    <description>Data object for storing candidate questionnaire data.</description>
    <fields>
        <fullName>Answer__c</fullName>
        <description>A field for the Candidate to answer the question.</description>
        <inlineHelpText>A field for the Candidate to answer the question.</inlineHelpText>
        <label>Answer</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>A question for the Candidate to answer as part of the promotion package.</description>
        <inlineHelpText>A question for the Candidate to answer as part of the promotion package.</inlineHelpText>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TQB_Candidate_Package__c</fullName>
        <label>TQB_Candidate_Package</label>
        <referenceTo>TQB_Candidate_Package__c</referenceTo>
        <relationshipLabel>TQB Candidate Questionnaires</relationshipLabel>
        <relationshipName>TQB_Candidate_Questionnaires</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <label>Track</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TQB Candidate Questionnaire</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>TQB Candidate Questionnaire  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TQB Candidate Questionnaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>